RESOLVED FIXED 42797
webkitPerformance.timing.responseEnd should not include document parse time
https://bugs.webkit.org/show_bug.cgi?id=42797
Summary webkitPerformance.timing.responseEnd should not include document parse time
Tony Gentilcore
Reported 2010-07-21 17:32:28 PDT
webkitPerformance.timing.responseEnd should not include document parse time
Attachments
Patch (4.56 KB, patch)
2010-07-21 17:43 PDT, Tony Gentilcore
no flags
Tony Gentilcore
Comment 1 2010-07-21 17:43:50 PDT
Darin Fisher (:fishd, Google)
Comment 2 2010-07-21 22:35:14 PDT
Comment on attachment 62251 [details] Patch r=me
WebKit Commit Bot
Comment 3 2010-07-22 00:41:07 PDT
Comment on attachment 62251 [details] Patch Clearing flags on attachment: 62251 Committed r63878: <http://trac.webkit.org/changeset/63878>
WebKit Commit Bot
Comment 4 2010-07-22 00:41:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.