WebCore/loader/MainResourceLoader.h
@@ -107,6 +107,7 @@ namespace WebCore {
 
         bool m_loadingMultipartContent;
         bool m_waitingForContentPolicy;
+        double m_timeOfLastDataReceived;
     };
 
 }
